@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,37 +18,37 @@ public class ListarPedidosUseCase {
     public List<PedidoDTO> executar() {
         return pedidoRepository.buscarTodos().stream()
             .map(PedidoDTO::de)
-            .collect(Collectors.toList());
+            .toList();
     }
     
     public List<PedidoDTO> executarPorStatus(StatusPedido status) {
         return pedidoRepository.buscarPorStatus(status).stream()
             .map(PedidoDTO::de)
-            .collect(Collectors.toList());
+            .toList();
     }
     
     public List<PedidoDTO> executarPorClienteId(String clienteId) {
         return pedidoRepository.buscarPorClienteId(clienteId).stream()
             .map(PedidoDTO::de)
-            .collect(Collectors.toList());
+            .toList();
     }
     
     public List<PedidoDTO> executarPorDataPedido(LocalDateTime dataInicio, LocalDateTime dataFim) {
         return pedidoRepository.buscarPorDataPedido(dataInicio, dataFim).stream()
             .map(PedidoDTO::de)
-            .collect(Collectors.toList());
+            .toList();
     }
     
     public List<PedidoDTO> executarPorStatusEData(StatusPedido status, LocalDateTime dataInicio, LocalDateTime dataFim) {
         return pedidoRepository.buscarPorStatusEData(status, dataInicio, dataFim).stream()
             .map(PedidoDTO::de)
-            .collect(Collectors.toList());
+            .toList();
     }
     
     public List<PedidoDTO> executarPorSessaoId(String sessaoId) {
         return pedidoRepository.buscarPorSessaoId(sessaoId).stream()
             .map(PedidoDTO::de)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
 
